Minor fix to blog img scaling on mobile
Mixed an issue with images no scaling propperly for the blog mobile
view.

--- a/css/blog.css
+++ b/css/blog.css
@@ -31,6 +31,12 @@
         padding-right: 15px;
         padding-bottom: 25px;
     }
+    
+    .comments_text img {
+        float: none;
+        max-width: 100%;
+        text-align: center;
+    }
 }
 
 /* Hide mobile stuff */
